# mcp-integration-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
mcp-platform/: package.json
rust-ai-agent-system/: Cargo.toml  Dockerfile  README.md
rust-ai-agent-system/configs/: development.toml.example  production.toml.example
supabase/functions/agent-health-check/: index.ts
supabase/functions/execute-agent-tool/: index.ts
supabase/migrations/: 001_initial_schema.sql
